istio/timeout-policy.yaml
apiVersion: networking.istio.io/v1alpha3 
kind: VirtualService 
metadata: 
  name: stock-quote-timeout
spec: 
  hosts: 
    - stock-quote-service 
  http: 
  - route: 
    - destination: 
        host: stock-quote-service 
    timeout: 90s
